syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/customer";

message Appointment {
    string appointment_id = 1;
    string customer_id = 2;
    string barber_id = 3;
    string service_id = 4;
    google.protobuf.Timestamp appointment_datetime = 5;
    int32 status = 6;
    google.protobuf.Timestamp  created_at = 7;
    google.protobuf.Timestamp  update_at = 8;
    int32 service_timer = 9;
}